# gpt-chatbot-cli

./: .env.example  .gitignore  .pypirc  CONTRIBUTING.md  LICENCE  README.md  __init__.py  chat_history.db  chatgpt-cli.py  gpt-chatbot-cli  install.sh  pyproject.toml  release.txt  requirements.txt  setup.py
.github/workflows/: main.yml  main.yml.backup
Archive/: requirements.txt
src/: database.py  history.py  openapi_controller.py  payloads.py
src/gptchatbotcli/: __init__.py  database.py  history.py  index.py  openapi_controller.py  payloads.py  services.py
