[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-chatbot-cli"
version = "0.3.4"
authors = [
  { name="Ruben Kharel", email="talkto@rubenk.com.np" },
]
description = "A minimal chatgpt cli"
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["chatgpt", "gpt-chatbot", "chatgpt-cli"] 

classifiers = [
        'Development Status :: 4 - Beta',
        "Intended Audience :: End Users/Desktop",
        "License :: OSI Approved :: MIT License",
        'Programming Language :: Python :: 3.9',
        'Topic :: Text Processing :: Linguistic',
        'Topic :: Utilities',
    ]
dependencies = [
    "openai==0.27.4",
    'prompt-toolkit==3.0.38',
    'termcolor==2.2.0',
    'tinydb==4.7.1',
    'click==8.1.3'
]

[project.urls]
Homepage = "https://github.com/slithery0/gpt-chatbot-cli"
"Bug Tracker" = "https://github.com/slithery0/gpt-chatbot-cli/issues"

[project.scripts]
gpt-chatbot-cli = "gptchatbotcli.index:main"